# pairwise-phenopacket-compare

./: pyproject.toml
nextflow/: main.nf  nextflow.config
nextflow/modules/: cluster_and_plot.nf  download_and_setup.nf  get_env.nf  pairwise_comparisons.nf
python/: download_and_setup.py  phenopacket_cluster_and_plot.py  phenopacket_pairwise_similarity.py
